...
        @Bindable var viewModel = viewModel
        NavigationStack {
            VStack(alignment: .leading, spacing: 16) {
                DSSearchBar(text: $viewModel.searchQuery)
                .accessibilityIdentifier("MovieListSearchField")
                
                Text("Watch New Movies")
                    .font(DSFonts.title.bold())
                    .foregroundColor(DSColors.primary)
                    .frame(maxWidth: .infinity, alignment: .leading)
                
                GenreView(genres: viewModel.genres, selected: $viewModel.selectedGenre)

...
